fix: text-alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1365,9 +1365,14 @@ ul.link_container {
 
 #pricing-table {
   margin: 100px auto;
-  text-align: center;
   transition-property: all 2s ease 2s;
   margin-top: 50px;
+}
+.center{
+  text-align: center;
+}
+.left{
+text-align: left;
 }
 #pricing-table:hover {
   margin-top: 52px;
